Add logic to remove products from DOM when deleted

--- a/angular_app/index.html
+++ b/angular_app/index.html
@@ -37,7 +37,7 @@
                   <td>{{product.price}}</td>
                   <td>
                     <button class="btn btn-info" ng-click="edit_product(product.id)">Edit</button>
-                    <button class="btn btn-danger" ng-click="delete_product(product.id)">Delete</button>
+                    <button class="btn btn-danger" ng-click="delete_product(product.id, $index)">Delete</button>
                   </td>
                 </tr>
               </tbody>
