Add form functionality

--- a/angular_app/index.html
+++ b/angular_app/index.html
@@ -36,7 +36,7 @@
                   <td>{{product.name}}</td>
                   <td>{{product.price}}</td>
                   <td>
-                    <button class="btn btn-info" ng-click="edit_product(product.id)">Edit</button>
+                    <button class="btn btn-info" ng-click="edit_product($index)" data-toggle="modal" data-target="#modal">Edit</button>
                     <button class="btn btn-danger" ng-click="delete_product(product.id, $index)">Delete</button>
                   </td>
                 </tr>
@@ -46,6 +46,7 @@
 
           <div class="col-md-4">
             <!-- Right side -->
+            <button class="btn btn-success" ng-click="new_product($index)" data-toggle="modal" data-target="#modal">New</button>
           </div>
         </div>
       </div>
@@ -58,12 +59,30 @@
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
-              <p><b>Title:</b> <input type="text" ng-model="currentMarker.message"></p>
-              <p><b>Due date:</b> <input type="datetime-local" ng-model="currentMarker.dueDate"></p>
-              <p><b>Address:</b> {{currentMarker.address}}</p>
+              <form>
+                <div class="form-group">
+                  <label for="id-input">ID</label>
+                  <input type="text" class="form-control" id="id-input" ng-model="current_product.id" placeholder="Enter an ID">
+                </div>
+
+                <div class="form-group">
+                  <label for="name-input">Name</label>
+                  <input type="text" class="form-control" id="name-input" ng-model="current_product.name" placeholder="Enter a name">
+                </div>
+
+                <div class="form-group">
+                  <label for="price-input">Price</label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">$</div>
+                    </div>
+                    <input type="number" step="0.01" class="form-control" id="name-input" ng-model="current_product.price" placeholder="Enter a price">
+                  </div>
+                </div>
+              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-info" data-dismiss="modal" ng-click="update_or_create_product()">Save</button>
             </div>
           </div>
         </div>
